# software-training-old

./: .clang-format  .gitignore  CMakeLists.txt  Docker_Instructions.md  LICENSE  M1_Setup.md  README.md  README.org  Syllabus.md  Text.txt  VirtualMachine_Instructions.org  beta_release.txt  bitcoin.py  blockchain  foo.docx  hello.txt  merge_ref_solutions.sh  rj-software-training.el  stable_release.txt  status_unstable.txt  test_stage.txt  tester.cpp  unstable.txt  update_tocs.sh  week1.java
assignments/week_2/project_2/: CMakeLists.txt  main.cpp  readme.md  runner.sh
assignments/week_2/project_2_4/: CMakeLists.txt  project_2_4.cpp  readme.md  solution.cpp
assignments/week_4/week_4_exercises/: CMakeLists.txt  package.xml
assignments/week_5/week_5_exercises/: CMakeLists.txt  package.xml
assignments/week_6/: CMakeLists.txt
assignments/week_6/week_6_exercises/: CMakeLists.txt  package.xml
astar_path_planner/: CMakeLists.txt  astar_path_planner_libraries.xml  package.xml
astar_path_planner/include/astar_path_planner/: astar_path_planner.hpp  path_reduction.hpp  utils.hpp
astar_path_planner/src/: astar_path_planner.cpp  astar_path_planner.hpp  astar_path_planner_plugin.cpp  path_reduction.cpp  path_reduction.hpp  utils.cpp  utils.hpp
controllers/: CMakeLists.txt  plugin_descriptions.xml
controllers/src/: controller_helpers.h  controller_test_client.cpp  lqr_controller.cpp  pid_controller.cpp  test_path_generator.cpp  test_path_generator.hpp
coordiante_transform/: CMakeLists.txt  package.xml
coordiante_transform/launch/: coordinate_transform.launch.py
coordiante_transform/src/: coordinate_transform_component.cpp
coordinate_transform/: CMakeLists.txt  package.xml
coordinate_transform/src/: coordinate_transform_component.cpp
hardware_applications/: CMakeLists.txt  README.md
hardware_applications/2017/week1/: final_code.cpp
hardware_applications/2017/week2/: final_main.cpp
hardware_applications/2017/week5/: CMakeLists.txt  starter_main.cpp
hardware_applications/color_binning/: CMakeLists.txt  color_binning.cpp
hardware_applications/color_binning_solution/: CMakeLists.txt  color_binning_solution.cpp
hardware_applications/drive_in_square/: CMakeLists.txt  drive_in_square.cpp  main.cpp
hardware_applications/drive_in_square_solution/: CMakeLists.txt  drive_in_square_solution.cpp  main.cpp
hardware_applications/inheritance/: CMakeLists.txt  RJRobotExtended.cpp  RJRobotExtended.h  inheritance.cpp
hardware_applications/inheritance_solution/: CMakeLists.txt  RJRobotExtended.cpp  RJRobotExtended_solution.h  inheritance_soln.cpp
hardware_applications/line_follow/: CMakeLists.txt  main.cpp
hardware_applications/line_follow_solution/: CMakeLists.txt  line_follow_solution.cpp  main.cpp
hardware_applications/median_line/: CMakeLists.txt  median_line.cpp
hardware_applications/median_line_solution/: CMakeLists.txt  main.cpp  median_line_solution.cpp
hardware_applications/spin_in_place/: CMakeLists.txt  main.cpp  spin_in_place.cpp
hardware_applications/system_test/: CMakeLists.txt  system_test.cpp
hardware_applications/week1/: CMakeLists.txt  final_code.cpp  starter_code.cpp
hardware_applications/week2/: CMakeLists.txt  final_helpers.cpp  final_helpers.h  final_main.cpp  starter_main.cpp
hardware_applications/week3/: CMakeLists.txt  final_main.cpp  starter_main.cpp
hardware_applications/week5/: final_main.cpp
localization/: CMakeLists.txt  package.xml
localization/config/: localizer_params.yaml
localization/launch/: particle_filter_localizer.launch.py
localization/src/: aruco_sensor_model.cpp  aruco_sensor_model.h  aruco_sensor_model.hpp  motion_model.cpp  motion_model.h  motion_model.hpp  odometry_sensor_model.cpp  odometry_sensor_model.h  odometry_sensor_model.hpp  particle.h  particle.hpp  particle_filter_localizer.cpp  particle_filter_localizer.h  particle_filter_localizer.hpp  random_helpers.cpp  random_helpers.hpp  sensor_model.cpp  sensor_model.h  sensor_model.hpp
lqr_control/: CMakeLists.txt  package.xml  plugin_descriptions.xml
lqr_control/src/: lqr_controller.cpp  mpc_controller.cpp  test.py  test_path_generator.cpp  test_path_generator.hpp
mapping/: CMakeLists.txt  package.xml
mapping/config/: mapping_params.yaml
mapping/launch/: mapping.launch.xml
mapping/src/: mapping_node.cpp
mineral_deposit_tracking/: CMakeLists.txt  package.xml
mineral_deposit_tracking/src/: kalman_filter.cpp  kalman_filter.hpp  mineral_deposit_tracker.cpp
peak_finder/: CMakeLists.txt  package.xml
peak_finder/src/: navigator.cpp  navigator.h  navigator.hpp  peak_finder_component.cpp  test_nav_client.cpp
reference_solutions/localization/: CMakeLists.txt
reference_solutions/localization/config/: localizer_params.yaml
reference_solutions/localization/launch/: particle_filter_localizer.launch.py
reference_solutions/localization/src/: aruco_sensor_model.cpp  aruco_sensor_model.hpp  motion_model.cpp  motion_model.hpp  (+5 more)
reference_solutions/lqr_control/: CMakeLists.txt  package.xml  plugin_descriptions.xml
reference_solutions/obstacle_detector/: CMakeLists.txt
reference_solutions/peak_finder/: CMakeLists.txt  package.xml
rj_training_bringup/: CMakeLists.txt  package.xml
rj_training_bringup/behavior_trees/: navigate.xml  navigate_w_replanning.xml
rj_training_bringup/config/: aruco_tag_visualization_params.yaml  control_project_nav_params.yaml  lqr_control_project_nav_params.yaml  mpc_control_project_nav_params.yaml  nav_params.yaml  nav_params_week_7.yaml  nav_params_week_8.yaml  planning_project_nav_params.yaml
rj_training_bringup/launch/: empty_map_server.launch.py  fake_localizer.launch.py  full_game_stack.launch.py  full_game_stack.launch.xml  mineral_deposit_tracker.launch.py  navigation.launch.py  test_optimization.launch.xml
rj_training_bringup/maps/: empty_map.yaml
rj_training_bringup/mineral_sample_sets/: default.yaml
rj_training_bringup/rviz_config/: color_detection.rviz  final_challenge.rviz  optimization.rviz  week_1.rviz  week_3.rviz  week_4.rviz  week_5.rviz  week_6.rviz  week_7.rviz  week_8.rviz
(+344 files in other folders)
