<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>coordinate_transform</name>
    <version>0.0.0</version>
    <description>A package for transforming a fiducial marker from camera frame to body frame</description>
    <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>stsl_interfaces</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
