<?xml version="1.0"?>
<package format="2">
  <name>week_6_exercises</name>
  <version>0.0.0</version>
  <description>The week_6_exercises package</description>
  <maintainer email="matthewhannay@todo.todo">matthewhannay</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

</package>
